--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
-    "monaco-editor": "^0.15.6",
+    "monaco-editor": "https://github.com/mradkov/monaco-editor.git#sophia",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
